--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -1,3 +1,45 @@
 // Place all the styles related to the customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+    padding: 20px;
+    background: bisque;
+}
+
+nav {
+    font-size: 12pt;
+    font-weight: bold;
+}
+
+h3 {
+    font-size: 18pt;
+    font-weight: bold;
+}
+
+a {
+    padding: 5px;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-gap: 30px;
+    margin: 0 auto 30px;
+    max-width: 1500px;
+}
+
+.container {
+    border: 2px solid rgb(6, 64, 223);
+    border-radius: 8px;
+    width: 320px;
+    height: 400px;
+    text-align: left;
+    margin-bottom: 10px;
+    background: white;
+}
+
+.container * {
+    padding: 10px;
+    margin: auto;
+}
