--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -33,7 +33,7 @@ a {
     border: 2px solid rgb(6, 64, 223);
     border-radius: 8px;
     width: 320px;
-    height: 400px;
+    max-height: 800px;
     text-align: left;
     margin-bottom: 10px;
     background: white;
