Created Province table, adjusted customer partial. END OF PART 3

--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -1,6 +1,13 @@
 <div class="container">
     <h3><%= customer.full_name %></h3>
     <%= image_tag(customer.full_name + ".jpg", size: "300x200")%>
+    <p>Province: 
+        <% if customer.province_id %>
+            <%= customer.province.name %>
+        <% else %>
+            None
+        <% end %>
+    </p>
     <% if customer.phone_number != "" %>
         <p>Phone: <%= customer.phone_number %></p>
     <% end %>
